crates/ruff_python_parser/tests/snapshots/invalid_syntax@single_star_for.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/single_star_for.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..35,
        body: [
            For(
                StmtFor {
                    node_index: AtomicNodeIndex(..),
                    range: 0..16,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 4..5,
                            id: Name("_"),
                            ctx: Store,
                        },
                    ),
                    iter: Starred(
                        ExprStarred {
                            node_index: AtomicNodeIndex(..),
                            range: 9..11,
                            value: Name(
                                ExprName {
                                    node_index: AtomicNodeIndex(..),
                                    range: 10..11,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: AtomicNodeIndex(..),
                                range: 13..16,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: AtomicNodeIndex(..),
                                        range: 13..16,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
            For(
                StmtFor {
                    node_index: AtomicNodeIndex(..),
                    range: 17..34,
                    is_async: false,
                    target: Starred(
                        ExprStarred {
                            node_index: AtomicNodeIndex(..),
                            range: 21..23,
                            value: Name(
                                ExprName {
                                    node_index: AtomicNodeIndex(..),
                                    range: 22..23,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 27..29,
                            id: Name("xs"),
                            ctx: Load,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: AtomicNodeIndex(..),
                                range: 31..34,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: AtomicNodeIndex(..),
                                        range: 31..34,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | for _ in *x: ...
  |          ^^ Syntax Error: Starred expression cannot be used here
2 | for *x in xs: ...
  |


  |
1 | for _ in *x: ...
2 | for *x in xs: ...
  |     ^^ Syntax Error: Starred expression cannot be used here
  |
